--- a/Lomafire_UE/Saved/Config/WindowsEditor/Engine.ini
+++ b/Lomafire_UE/Saved/Config/WindowsEditor/Engine.ini
@@ -91,3 +91,11 @@ EndpointSettings=(bEnableLogging=False,PurgeProcessedMessageDelaySeconds=30,Remo
 [/Script/ConcertTakeRecorder.ConcertSessionRecordSettings]
 LocalSettings=(bRecordOnClient=True,bTransactSources=True)
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
